Add -XX:+UseCompactObjectHeaders for Java 26